syntax = "proto3";
//import "validate/validate.proto";

package protosound;

option go_package = "./;protosound";

service SoundService {
    rpc GetSound(ClientInfoMessage) returns (stream ChatServerMessage);
    rpc SendSound(ChatClientMessage) returns (ClientResponseMessage);
    rpc PingServer(ClientInfoMessage) returns (EmptyMessage);
    rpc InitUser(EmptyMessage) returns (ClientUserInitResponseMessage);
    rpc InitConf(EmptyMessage) returns (ClientConfInitResponseMessage);
}

message ChatServerMessage {
    repeated float data = 3; // fixed32?
    int64 rate = 2;
    uint64 soundId = 4;
    bool onlyOne = 5;

    reserved 1; // bytes data
}

message ChatClientMessage {
    repeated float data = 4;
    int64 rate = 2;
    uint32 userId = 6;
    uint64 confId = 7;
    uint64 timeStamp = 8;
    uint32 messageInd = 9;

    reserved 1;
    reserved 3; 
    reserved 5;
}

message ClientResponseMessage {
    int64 rate = 1;
    uint64 soundId = 2;
}

message ClientInfoMessage {
    uint64 confId = 1;
    uint32 userId = 2;
}

message ClientUserInitResponseMessage {
    uint32 userId = 1;
}

message ClientConfInitResponseMessage {
    uint64 confId = 1;
}

// not to use basic google.Empty now, may be later change 
message EmptyMessage {
}
